--- a/src/component/features/app/header/Header.css
+++ b/src/component/features/app/header/Header.css
@@ -9,7 +9,7 @@ img{
     border-radius: 50%;
 }
 .headerContent{
-    padding: 0 20px;
+    padding: 0px 20px;
     width: 100%;
     display: flex;
     align-items: center;
