--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,6 @@
   height: 100vh;
   position: relative;
   overflow:hidden;
-  background-color: #fff;
-  background-image: 
-    radial-gradient(at top left, #F0ACE0, transparent),
-    radial-gradient(at top right, #FFA4B2, transparent),
-    radial-gradient(at bottom left, #A7D3F2, transparent);
-  background-size: 100% 100%;
+  background-color: #F6F6F6;
   background-repeat: no-repeat;
 }
