--- a/src/component/features/app/header/Header.css
+++ b/src/component/features/app/header/Header.css
@@ -1,3 +1,7 @@
+.login{
+    height: 65px;
+    background-color: #C13450;
+}
 img{
    max-width: 100%;
    max-height: 100%;
@@ -30,5 +34,5 @@ img{
     font-size: 14px;
     margin-right: 6px;
     font-weight: bold;
-    color: #756A6E;
+    color: #fff;
 }
