Add button ui and text-field ui

--- a/src/component/features/app/header/Header.css
+++ b/src/component/features/app/header/Header.css
@@ -27,8 +27,8 @@ img{
 }
 .loginContent p {
     margin-top: -4px;
-    font-size: 14px;
+    font-size: 16px;
     margin-right: 6px;
     font-weight: bold;
-    color: #756A6E;
+    color: #FFFF;
 }
