--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   background-color: #F6F6F6;
   background-repeat: no-repeat;
 }
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
