--- a/src/component/features/app/account/Account.css
+++ b/src/component/features/app/account/Account.css
@@ -3,3 +3,15 @@
     justify-content: center;
     margin-top: 2rem;
 }
+.creatNewCircleModal{
+    min-width: 80%;
+}
+.creatNewCircleModalInputBox{
+    margin-top: 20px;
+   
+}
+.createNewCircleTextField{
+    margin-top: 5px;
+    margin-bottom: 15px !important;
+    width: 100%;
+}
