--- a/src/component/features/app/account/Account.css
+++ b/src/component/features/app/account/Account.css
@@ -27,5 +27,11 @@
     width: 120px;
 }
 .confirmModal{
-    z-index: 7;
+    z-index: 101;
+}
+.subTitle{
+    font-weight: bold;
+    color: #848484;
+    font-size: 14px;
+    margin-bottom: 1rem;
 }
