--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,21 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  overflow:hidden;
-  background-color: #F6F6F6;
+  overflow: hidden;
+  background-color: #f6f6f6;
   background-repeat: no-repeat;
 }
-.center{
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
+.mbt-1 {
+  margin-bottom: 1rem;
+}
+.sp-ar {
+  justify-content: space-around;
 }
