--- a/src/component/features/app/list/List.css
+++ b/src/component/features/app/list/List.css
@@ -8,42 +8,15 @@
   margin-left: 20px;
   margin-top: 20px;
 }
-
-.circleImage {
-  width: 210px;
-  height: 100px;
-  background: linear-gradient(180deg, #ff72dc 0%, #ff6471 100%);
-  border-radius: 7px;
+.circleListItem {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding-bottom: 1rem;
 }
-.circleElementTitle {
-  font-weight: bold;
-  font-size: 18px;
-  color: #fff;
+.circleItem {
+  margin-right: 1rem;
 }
-.iconBox {
-  margin-top: 12px;
-  display: flex;
-}
-.iconItem {
-  display: flex;
-  align-items: center;
-}
-.iconItem p {
-  margin-left: 5px;
-}
-.circleElementBox{
-    margin-right: 24px;
-}
-.circleTitle {
-  color: #c13450;
-  font-weight: bold;
-  font-size: 24px;
-  margin-bottom: 5px;
-}
-.circleElementList {
-  display: flex;
-  overflow-y: auto;
+.circleListItem::-webkit-scrollbar {
+  display: none;
 }
