--- a/src/component/ui/Modal.css
+++ b/src/component/ui/Modal.css
@@ -26,7 +26,9 @@
   padding: 1rem;
 }
 .overlayModal {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(36, 36, 36, 0.396);
