--- a/src/component/ui/CircleMenu.css
+++ b/src/component/ui/CircleMenu.css
@@ -1,10 +1,13 @@
 .circelMenu{
-    max-width: 100%;
-    margin: 10px 20px;
+
+ 
+    margin: 10px 10px;
+    position: fixed;
+    height: 60px;
 
 }
 .circleMenuList{
- display: flex;   
+   height: 100%;
 }
 .circleMenuItem{
     font-size: 12px !important;
