--- a/src/component/features/app/home/Home.css
+++ b/src/component/features/app/home/Home.css
@@ -12,3 +12,13 @@
 .circlePopup{
     border-radius: 50%;
 }
+.menuPopup{
+    font-size:12px !important ;
+    display: flex !important;
+}
+.menuPopup:last-child{
+    color: red;
+}
+.menuPopupIcon{
+    margin-right: 5px;
+}
