--- a/src/component/features/app/account/Account.css
+++ b/src/component/features/app/account/Account.css
@@ -1,37 +1,72 @@
-.newCircleButton{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    z-index: 2;
+.newCircleButton {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  z-index: 2;
 }
-.creatNewCircleModal{
-    min-width: 80%;
-    z-index: 6;
+.creatNewCircleModal {
+  min-width: 80%;
+  z-index: 6;
 }
-.creatNewCircleModalInputBox{
-    margin-top: 20px;
-   
+.creatNewCircleModalInputBox {
+  margin-top: 20px;
 }
-.createNewCircleTextField{
-    margin-top: 5px;
-    margin-bottom: 15px !important;
-    width: 100%;
+.createNewCircleTextField {
+  margin-top: 5px;
+  margin-bottom: 15px !important;
+  width: 100%;
 }
-.creatNewCircleModalButtonBox{
-    display: flex;
-    justify-content: space-around;
+.creatNewCircleModalButtonBox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.creatNewCircleModalButtonBox div {
+  width: 120px;
+}
+.confirmModal {
+  z-index: 101;
+}
+.subTitle {
+  font-weight: bold;
+  color: #848484;
+  font-size: 14px;
+  margin-bottom: 1rem;
+}
+.accountSettingInputUpload {
+  align-items: center;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  color: #848484;
+  display: flex;
+  padding: 0.4rem 1rem;
+}
+.inputSetting {
+    display: none;
+}
+.align-center {
     align-items: center;
-   
 }
-.creatNewCircleModalButtonBox div{
-    width: 120px;
+.flex {
+    display: flex;
 }
-.confirmModal{
-    z-index: 101;
+.inputBox {
+    padding: 1rem 0;
 }
-.subTitle{
-    font-weight: bold;
-    color: #848484;
-    font-size: 14px;
-    margin-bottom: 1rem;
+.circleImagePreview img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.imageInputTitle{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.imageInputTitle p{
+  font-weight: bold;
+  font-size: 14px;
+  margin-left: 3px;
 }
