--- a/src/component/features/app/home/members/Members.css
+++ b/src/component/features/app/home/members/Members.css
@@ -9,17 +9,13 @@
   align-items: center;
 }
 .wantToJoinUserAvatar {
+  margin-right: 30px;
+}
+.wantToJoinUserAvatar img{
   width: 50px;
   height: 50px;
-  margin-right: 30px;
   border-radius: 50%;
-  overflow: hidden;
-  position: relative;
-}
-.wantToJoinUserAvatar img {
-  max-height: 100%;
-  position: absolute;
-  right: -25%;
+  object-fit: cover;
 }
 .wantToJoinUserMessageBox {
   width: 75%;
