--- a/src/component/features/app/home/event/Event.css
+++ b/src/component/features/app/home/event/Event.css
@@ -49,6 +49,6 @@
 }
 .eventDetailImfor{
     margin:5px;
-    font-weight: 600;
-    font-size: 16px;
+    /* font-weight: 600; */
+    font-size: 15px;
 }
