--- a/src/component/features/app/home/CircleHome.css
+++ b/src/component/features/app/home/CircleHome.css
@@ -1,6 +1,6 @@
 .circleHome{
-    height: 85%;
-    overflow: scroll;
+    max-height: 80%;
+    overflow: auto;
 }
 .homeTitle{
     padding-top: 150px;
