--- a/src/component/features/app/list/circle/Circle.css
+++ b/src/component/features/app/list/circle/Circle.css
@@ -4,7 +4,7 @@
 
 }
 .circleDeatailsBox {
-  margin-left: 20px;
+  margin-left: 15px;
   margin-top: 20px;
   max-height: 600px;
   overflow: auto;
@@ -55,9 +55,14 @@
   font-weight: bolder;
   top: 3px;
 }
-
-.circleMemberBox,.circlePlaceBox,.circleIntroBox,.circleScheduleBox{
+.circleMemberList{
+  width: 100%;
   margin-bottom: 25px;
+  overflow: auto;
+}
+.circlePlaceBox,.circleIntroBox,.circleScheduleBox{
+  margin-bottom: 25px;
+  width: 365px;
 }
 .circleMemberItem {
   display: flex;
