--- a/src/component/ui/CircleMenu.css
+++ b/src/component/ui/CircleMenu.css
@@ -2,7 +2,7 @@
   margin: 10px 10px;
   position: fixed;
   height: 60px;
-  /* width: 370px; */
+  width: 100%;
 }
 .circleMenuList {
   height: 100%;
