--- a/src/component/features/app/home/chat/Chat.css
+++ b/src/component/features/app/home/chat/Chat.css
@@ -114,7 +114,11 @@
   margin-right: calc(20px + 3rem);
   border-radius: 5px;
   margin-top: 5px;
-  width: 100px;
-  height: 100px;
+  object-fit: cover;
+}
+
+.messageImage img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
