--- a/src/component/features/app/home/chat/Chat.css
+++ b/src/component/features/app/home/chat/Chat.css
@@ -117,8 +117,31 @@
   object-fit: cover;
 }
 
-.messageImage img{
+.messageImage img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.reactionBox {
+  display: flex;
+  gap: 5px;
+}
+
+.messageReactIconBox {
+  margin-top: 4px;
+  margin-bottom: 8px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #e4e4e4;
+  padding: 4px 8px;
+  border-radius: 8px;
+}
+
+.messageReactCount {
+  font-size: 16px;
+  font-weight: bold;
+  color: #c13450;
 }
